tests/bugs/strict_statement_end_305.sy
start :: fn {
    (1)1
}
// error: @2
